Module-5/k8s/4-deployment-notes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-api
  namespace: notes-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: notes-api
    spec:
      containers:
        - name: notes-api
          image: gcr.io/kubernetes-course-lohika-2020/notes-api:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /notes
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /notes
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
  selector:
    matchLabels:
      app: notes-api

---
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: notes-app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: notes-api
  type: NodePort
